<resources>
    <string name="app_name">Multi Purpose ToolKit</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="hint">Name</string>
    <string name="generate_card">Generate Card</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="PlusMinus">+/-</string>
    <string name="Divide">/</string>
    <string name="Multiply">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Percent">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Minus">-</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>
    <string name="Plus">+</string>
    <string name="flash_light">Flash Light</string>
    <string name="todo">TODO</string>
</resources>